@@ -105,6 +105,9 @@ Avro 1.6.0 (unreleased)
     AVRO-895. JsonDecoder does not tolerate JSON records with
     different field order. (thiru)
 
+    AVRO-906. Java: Fix so that ordering of schema properties is
+    consistent. (cutting)
+
 Avro 1.5.4 (12 September 2011)
 
   IMPROVEMENTS
